--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -22,7 +22,7 @@
             {% if cart_items %}
             <div class="table-responsive rounded">
             {% for item in cart_items %}
-            <div class="card mb-3" style="max-width: 1000px;">
+            <div class="card mb-3" style="max-width: 1000px; border: none;">
                 <div class="row g-0">
                   <div class="col-md-4">
                     <img src="{{ item.product.image.url }}" class="img-fluid rounded-start" alt="...">
