--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -37,7 +37,7 @@
             <div class="d-grid gap-2 d-md-flex justify-content-md-start mb-4 mb-lg-3">
                 <div >
                     <h4 style="padding-bottom: 15px;">
-                        <a href="{% url 'products' %}" class="shop-now-button2 btn btn-lg rounded-0 text-uppercase py-3">Shop Now</a>
+                        <a href="{% url 'products' %}?category=Vegan,Vegetarian" class="shop-now-button2 btn btn-lg rounded-0 text-uppercase py-3">Shop Now</a>
                     </h4>
                 </div>
             </div>
@@ -57,7 +57,7 @@
             <div class="d-grid gap-2 d-md-flex justify-content-md-start mb-4 mb-lg-3">
                 <div >
                     <h4 style="padding-bottom: 15px;">
-                        <a href="{% url 'products' %}" class="shop-now-button3 btn btn-lg rounded-0 text-uppercase py-3">Shop Now</a>
+                        <a href="{% url 'products' %}?category=Weights,Cardio" class="shop-now-button3 btn btn-lg rounded-0 text-uppercase py-3">Shop Now</a>
                     </h4>
                 </div>
             </div>
